--- a/CatalogueMovie/app/src/main/res/values/strings.xml
+++ b/CatalogueMovie/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
   <string name="app_name">CatalogueMovie</string>
+  <string name="search_movie">Cari movies</string>
+  <string name="search">Cari</string>
+
+  <!-- TODO: Remove or change this placeholder text -->
+  <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
