--- a/CatalogueMovie/app/src/main/res/values/strings.xml
+++ b/CatalogueMovie/app/src/main/res/values/strings.xml
@@ -1,15 +1,27 @@
+
 <resources>
   <string name="app_name">Catalogue Movie</string>
 
-  <string name="search_movie_btn">Search</string>
-  <string name="search_movie_hint">Search movies</string>
   <string name="blank_field_search">Must be filled</string>
   <string name="unknown_string">Unknown</string>
   <string name="close_btn">Close</string>
+  <string name="release">Release</string>
+  <string name="title">Title</string>
   <string name="emptyorerror">Empty or Error</string>
 
   <string name="share_cont_desc">share movie</string>
-  <string name="movie_image_cont_desc">movie image</string>
-  <string name="release">Release</string>
-  <string name="title">Title</string>
+  <string name="movie_image_cont_desc" translatable="false">movie image</string>
+
+  <string name="menu_settings">Settings</string>
+  <string name="menu_now_playing">Now Playing</string>
+  <string name="menu_upcoming">Upcoming</string>
+  <string name="menu_top_rated">Top Rated</string>
+  <string name="menu_popular">Popular</string>
+  <string name="menu_change_theme">Change Theme</string>
+  <string name="menu_change_language">Change Language</string>
+  <string name="menu_search_movie">Search</string>
+  <string name="menu_search_movie_hint">Search movies</string>
+
+  <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
+  <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
 </resources>
