added daily reminder

--- a/CatalogueMovie/app/src/main/res/values-in/strings.xml
+++ b/CatalogueMovie/app/src/main/res/values-in/strings.xml
@@ -11,6 +11,7 @@
   <string name="emptyorerror">Kosong atau Error</string>
   <string name="save_fav_success">Sukses menyimpan ke favorit</string>
   <string name="already_saved">Sudah jadi favorit</string>
+  <string name="daily_remider_text">Catalogue Movie kangen nih</string>
 
   <string name="share_cont_desc">share movie</string>
 
