--- a/CatalogueMovie/app/src/main/res/values/strings.xml
+++ b/CatalogueMovie/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
   <string name="emptyorerror">Empty or Error</string>
   <string name="save_fav_success">Success saved to favorite</string>
   <string name="already_saved">Already favorited</string>
+  <string name="daily_remider_text">Catalogue Movie missing you</string>
 
   <string name="share_cont_desc">share movie</string>
   <string name="movie_image_cont_desc" translatable="false">movie image</string>
